--- a/mobdev/pubspec.yaml
+++ b/mobdev/pubspec.yaml
@@ -56,6 +56,8 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/json/
+    - assets/attribute/
+    - assets/specialty/
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
