--- a/mobdev/pubspec.yaml
+++ b/mobdev/pubspec.yaml
@@ -58,6 +58,7 @@ flutter:
     - assets/json/
     - assets/attribute/
     - assets/specialty/
+    - assets/decor/
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
