added dependencies for video plaaying

--- a/mobdev/pubspec.yaml
+++ b/mobdev/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  carousel_slider: ^5.0.0
+  video_player: ^2.9.5
+  chewie: ^1.4.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -59,6 +62,7 @@ flutter:
     - assets/attribute/
     - assets/specialty/
     - assets/decor/
+    - assets/vids/
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
